--- a/gdx-freetype/build.gradle
+++ b/gdx-freetype/build.gradle
@@ -14,8 +14,8 @@
  * limitations under the License.
  ******************************************************************************/
 
-apply plugin: 'java'
+apply plugin: 'java-library'
  
 dependencies {
-    compileOnly project(":gdx-mod")
+    api project(":gdx-mod")
 }
