--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,10 +1,20 @@
 apply plugin: 'com.android.application'
 
+evaluationDependsOn(':core')
+
 android {
+	buildToolsVersion '27.0.3'
 	compileSdkVersion 27
+	
+	sourceSets {
+		main {
+			assets.srcDirs = project(':core').sourceSets.main.resources.srcDirs
+		}
+	}
+	
 	defaultConfig {
 		applicationId 'info.zthings.geem'
-		minSdkVersion 19
+		minSdkVersion 24
 		targetSdkVersion 27
 		versionCode 1
 		versionName rootProject.version
@@ -32,15 +42,19 @@ dependencies {
 	configurations { natives }
 	
 	dependencies {
-		api rootProject
-		implementation 'com.badlogicgames.gdx:gdx-backend-android:1.9.8'
+		api project(':core')
+		
+		implementation ('com.badlogicgames.gdx:gdx-backend-android:1.9.8') {
+			transitive = false
+		}
+		
 		natives 'com.badlogicgames.gdx:gdx-platform:1.9.8:natives-armeabi'
 		natives 'com.badlogicgames.gdx:gdx-platform:1.9.8:natives-armeabi-v7a'
 		natives 'com.badlogicgames.gdx:gdx-platform:1.9.8:natives-arm64-v8a'
 		natives 'com.badlogicgames.gdx:gdx-platform:1.9.8:natives-x86'
 		natives 'com.badlogicgames.gdx:gdx-platform:1.9.8:natives-x86_64'
 		
-		implementation 'com.badlogicgames.gdx:gdx-freetype:1.9.8'
+		//implementation 'com.badlogicgames.gdx:gdx-freetype:1.9.8'
 		natives 'com.badlogicgames.gdx:gdx-freetype-platform:1.9.8:natives-armeabi'
 		natives 'com.badlogicgames.gdx:gdx-freetype-platform:1.9.8:natives-armeabi-v7a'
 		natives 'com.badlogicgames.gdx:gdx-freetype-platform:1.9.8:natives-arm64-v8a'
@@ -48,6 +62,7 @@ dependencies {
 		natives 'com.badlogicgames.gdx:gdx-freetype-platform:1.9.8:natives-x86_64'
 	}
 }
+
 
 task copyOutput(type: Copy) {
 	from new File(buildDir, 'outputs/apk')
