Change some configs (v1.0)

--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -16,9 +16,9 @@ jar {
         attributes 'Main-Class': mainClassName
     }
 
-    /*from {
+    from {
         configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-    }*/
+    }
 }
 
 dependencies {
