--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
             android:name="info.zthings.geem.AndroidLauncher"
             android:label="@string/app_name"
             android:screenOrientation="sensorLandscape"
-            android:configChanges="keyboard|keyboardHidden|navigation|orientation|screenSize">
+            android:configChanges="keyboard|keyboardHidden|navigation|orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
