--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'java'
 
-sourceCompatibility = targetCompatibility = '1.8'
+sourceCompatibility = targetCompatibility = 1.7
 
 dependencies {
 	compile project(':gdx-mod')
