--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 mainClassName = 'info.zthings.geem.desktop.DesktopLauncher'
-sourceCompatibility = targetCompatibility = '1.8'
+sourceCompatibility = targetCompatibility = 1.7
 
 jar {
     jar {
